--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ Google Font Poppins
 body {
     font-family: 'Libre Baskerville', serif;
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    pading: 0;
 }
 
 .carousel-img {
@@ -19,12 +21,4 @@ body {
     height: 100%;
     background-color: black;
     opacity: .3;
-}
-
-.carousel-text h1 {
-    font-size: 5vw;
-}
-
-.head-par {
-    font-size: 2vw;
 }
